# invoice_processor

./: .gitignore  LICENSE  README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml  run.py
src/invoice_processor/: __init__.py  __main__.py  ai_context.py  cli.py  config.py  models.py  monitoring.py  processor.py  utils.py
src/invoice_processor/tui/: __init__.py  app.py  logging_handler.py
