[project]
name = "invoice-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.5.3",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pydantic-ai[ollama]>=0.7.5",
    "pypdf>=6.0.0",
    "pyyaml>=6.0.2",
    "textual>=5.3.0",
]
